--- a/index.html
+++ b/index.html
@@ -3,34 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filme Enigma</title>
+    <title>Filmes: Enigma e O Jogo da Imitação</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Filme Enigma</h1>
+        <h1>Filmes: Enigma e O Jogo da Imitação</h1>
     </header>
 
-    <section id="enredo">
-        <h2>Enredo</h2>
+    <section id="enigma">
+        <h2>Enigma</h2>
         <p>Enigma é um filme de suspense lançado em 2001, dirigido por Michael Apted e baseado no romance homônimo de Robert Harris. A história se passa durante a Segunda Guerra Mundial, centrada nos esforços dos britânicos para decifrar o código Enigma usado pelos nazistas para comunicações secretas.</p>
     </section>
 
-    <section id="elenco">
-        <h2>Elenco</h2>
-        <ul>
-            <li>Dougray Scott</li>
-            <li>Kate Winslet</li>
-            <li>Jeremy Northam</li>
-            <li>Saffron Burrows</li>
-            <li>Nikolaj Coster-Waldau</li>
-        </ul>
+    <section id="imitacao">
+        <h2>O Jogo da Imitação</h2>
+        <p>O Jogo da Imitação é um filme biográfico de 2014 dirigido por Morten Tyldum e estrelado por Benedict Cumberbatch como o matemático britânico Alan Turing, que ajudou a decifrar o código Enigma durante a Segunda Guerra Mundial. O filme retrata os esforços de Turing e sua equipe na Estação X em Bletchley Park.</p>
     </section>
 
-    <section id="trailer">
-        <h2>Trailer</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/f7XX5ZPvLPw" title="Trailer do Filme Enigma" frameborder="0" allowfullscreen></iframe>
-    </section>
+    <footer>
+        <p>© 2024 Filmes: Enigma e O Jogo da Imitação</p>
+    </footer>
     
 </body>
 </html>
