--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     
     <main>
     
-            <h2>relevância histórica</h2>
+            <h2>Relevância Histórica</h2>
             <p>A relevância histórica do filme reside na importância do trabalho de decifração do código Enigma pela equipe de Bletchley Park durante a guerra. O código Enigma era utilizado pelos nazistas para criptografar suas comunicações militares, o que tornava extremamente difícil para os Aliados interceptarem e interpretarem essas mensagens. A quebra desse código pelos britânicos foi uma conquista significativa e teve um impacto crucial no curso da guerra, fornecendo informações valiosas que ajudaram os Aliados a antecipar os movimentos inimigos e a ganhar vantagem estratégica.
 
                 Além disso, o filme destaca o papel das mulheres nesse esforço de guerra, já que muitas mulheres foram recrutadas para trabalhar em Bletchley Park como parte da equipe de decifração. Isso contribui para reconhecer a contribuição das mulheres para o esforço de guerra, algo que muitas vezes foi subestimado ou esquecido pela história oficial.
